app/traefik/ingress-route-443.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: __APP_NAME__
  namespace: __APP_NAME__
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`__YOUR_HOST__`)
      services:
        - name: __APP_NAME__-svc
          port: 80
      middlewares:
        - name: strong-tls
  tls:
    certResolver: le
    options:
      name: tlsoptions
