app/traefik/ingress-route-80.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: __APP_NAME__-80
  namespace: __APP_NAME__
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`__YOUR_HOST__`)
      middlewares:
        - name: http-https-redirect
      services:
        - name: __APP_NAME__-svc
          port: 80
